# eleina_agent

./: .gitignore  README.md  docker-compose.yml  main.py  openapi.json  pyproject.toml  run_test.py  simple_sdk_test.py  simple_test.py  test_all_features.py  test_api_debug.py  test_embedding_api.py  test_embedding_debug.py  test_embedding_final.py  test_local_image.py  test_output.py  test_output_result.txt  test_print.py  test_result.py  test_result.txt  test_sdk.py  test_simple.py  verify_sdk.py
.trae/skills/智能分块-文本清洗/: SKILL.md
configs/: alert_rules.yml  alertmanager.yml  prometheus.yml
configs/grafana/provisioning/dashboards/: dashboards.yml
configs/grafana/provisioning/datasources/: datasources.yml
dashboards/: business_dashboard.json  cost_dashboard.json  performance_dashboard.json  quality_dashboard.json
data/: embedding_cache.json
data/docs/: documents.json
data/sessions/: archived_sessions.json
data/tasks/: tasks.json
data/vector_store/: vector_store.json
evolution/: __init__.py  rag_evaluator.py  test_rag_evaluator.py
evolution/reports/: rag_evaluation_report_20260411_144721.json
examples/: multimodal_complete.py  multimodal_example.py
scripts/: add_characters.py  append_knowledge.py  batch_add_knowledge.py  evaluate_agent.py  init_database.py  test_components.py  test_langgraph_sm.py  test_qwen_plus.py
src/agent/: execution_controller.py  intent_parser.py  model_engine.py  reasoning_engine.py
src/api/: __init__.py  app.py  routes.py  schemas.py
src/cli/: interactive_cli.py
src/components/: __init__.py  context_compressor.py  interrupt_controller.py  langgraph_state_machine.py  session_manager.py  slot_filler.py  state_machine.py  task_progress_manager.py
src/config/: config.py
src/database/: __init__.py  database.py  sqlmodels.py
src/database/services/: agent_config_service.py  audit_service.py  memory_service.py  permission_service.py  session_service.py  task_service.py  tool_metadata_service.py  user_service.py
src/memory/: __init__.py  memory_manager.py  memory_retriever.py  memory_store.py  memory_writer.py
src/monitoring/: __init__.py  alerting_module.py  diagnosis_module.py  evaluation_module.py  logging_module.py  metrics_module.py  trace_module.py
src/multimodal/: __init__.py  character_recognizer.py  config.py  image_to_text.py  multimodal_processor.py  speech_to_text.py  text_to_speech.py
src/prompt/: system_prompt.txt
src/rag/: doc_manager.py  doc_parser.py  embedding_engine.py  prompt_builder.py  reranker.py  retriever.py  text_chunker.py  vector_store.py
src/rag/knowledge/: _behavior_rules.md  _core_profile.md  _likes_dislikes.md  _relationships.md  _story_background.md
src/skill/: __init__.py  cli_registrar.py  intent_recognizer.py  intent_registry.py  response_template.py  skill_orchestrator.py  skill_state_manager.py  skill_tool_router.py  slot_filling.py
src/tools/: __init__.py  cli_registrar.py  param_parser.py  result_formatter.py  security_gateway.py  tool_callback.py  tool_executor.py  tool_registry.py  tool_selector.py
test/: test_rag_retrieval.py  test_state_machine.py
