[tool.poetry]
name = "eleina-agent"
version = "0.1.0"
description = "Anime character intelligent agent"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
pydantic = "^2.6.4"
pydantic-settings = "^2.1.0"
requests = "^2.32.0"
numpy = "^1.26.0"
scikit-learn = "^1.4.0"
nltk = "^3.8.1"
PyPDF2 = "^3.0.1"
pdfminer-six = "^20231228"
python-docx = "^1.0.0"
langgraph = "^1.1.0"
langchain = "^1.2.0"
httpx = "^0.27.0"
redis = "^5.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
black = "^24.4.0"
isort = "^5.13.2"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"