[tool.poetry]
name = "eleina-agent"
version = "0.1.0"
description = "Anime character intelligent agent"
authors = ["Your Name <your.email@example.com>"]
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.12,<3.15"

python-dotenv = "^1.0.1"
pydantic = "^2.6.4"
pydantic-settings = "^2.1.0"
requests = "^2.33.1"
numpy = "^1.26.4"
scikit-learn = "^1.4.0"
PyPDF2 = "^3.0.1"
pdfminer-six = "^20231228"
python-docx = "^1.0.0"
httpx = "^0.28.0"
redis = "^7.4.0"
sqlalchemy = "^2.0.49"
pymysql = "^1.1.0"
pymilvus = "^2.4.0"
rank-bm25 = "^0.2.2"

langchain = "^0.2.10"
langchain-core = "^0.2.36"
langchain-community = "^0.2.10"
langgraph = "^0.2.50"
langchain-milvus = "^0.1.3"
dashscope = "^1.25.17"
pillow = "^12.2.0"
fastapi = "^0.111.0"
uvicorn = "^0.30.0"

# 🔥 最安全版本：强制 Windows + CPU
torch = { version = "2.4.1", extras = ["cpu"], platform = "win_amd64" }

modelscope = "^1.36.0"

opentelemetry-api = "^1.20.0"
opentelemetry-sdk = "^1.20.0"
opentelemetry-exporter-jaeger-thrift = "^1.20.0"
opentelemetry-instrumentation-fastapi = "^0.45b0"
opentelemetry-instrumentation-requests = "^0.45b0"
prometheus-client = "^0.19.0"
psutil = "^5.9.0"
addict = "^2.4.0"
datasets = "^4.8.4"
huggingface-hub = "0.34.0"
transformers = "4.45.2"

[tool.poetry.group.dev.dependencies]
black = "^24.4.0"
isort = "^5.13.2"
flake8 = "^7.0.0"
locust = "^2.43.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"